feat: add Footer

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,4 +1,9 @@
 .app {
   font-family: 'Inter', Arial, sans-serif;
   color: #FFF;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100vh;
+  min-width: 320px;
 }
