--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -1,18 +1,17 @@
 .promo {
-  background-color: #073042;
-  display: flex;
-  justify-content: center;
+    display: flex;
+    justify-content: space-between;
 }
 
-.promo__container {
-  max-width: 1140px;
-  min-width: 320px;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  margin-top: 75px;
-  padding-bottom: 75px;
-}
+/*.promo__container {*/
+/*  max-width: 1140px;*/
+/*  min-width: 320px;*/
+/*  width: 100%;*/
+/*  display: flex;*/
+/*  justify-content: space-between;*/
+/*  margin-top: 75px;*/
+/*  padding-bottom: 75px;*/
+/*}*/
 
 .promo__info {
   display: flex;
@@ -59,19 +58,12 @@
   background-size: contain;
 }
 
-@media screen and (max-width: 1139px) {
-  .promo__container {
-    padding: 0 30px 75px 30px;
-  }
-}
 
 @media screen and (max-width: 1100px) {
-  .promo__container {
+  .promo {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 140px;
-    padding: 0 0 75px 0;
   }
 
   .promo__info {
@@ -103,12 +95,9 @@
 }
 
 @media screen and (max-width: 500px) {
-  .promo__container {
-    margin-top: 70px;
-  }
-
-  .promo__info {
-  }
+  /*.promo__container {*/
+  /*  margin-top: 70px;*/
+  /*}*/
 
   .promo__logo {
     width: 210px;
