--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -1,15 +1,89 @@
 .about-project {
-  background-color: #202020;
-  display: flex;
-  justify-content: center;
 }
 
-.about-project__container {
-  max-width: 1140px;
-  min-width: 320px;
-  width: 100%;
-  /*display: flex;*/
-  /*justify-content: space-between;*/
+.about-project__cards {
+  display: flex;
+  margin-top: 70px;
+  gap: 40px;
+}
+
+.about-project__card {
+
+}
+
+.about-project__card-title {
+  margin: 0;
+  font-size: 20px;
+  font-weight: 400;
+}
+
+.about-project__card-subtitle {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+  margin: 26px 0 0 0;
+}
+
+.about-project__lasting,
+.about-project__naming {
+  display: flex;
+}
+
+.about-project__lasting {
+  font-size: 14px;
+  font-weight: 400;
+  background-color: #303030;
+  color: #FFF;
   margin-top: 110px;
-  padding-bottom: 110px;
+}
+
+.about-project__naming {
+  font-size: 14px;
+  font-weight: 500;
+  color: #8B8B8B;
+}
+
+.about-project__cell {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  padding: 9px 0;
+}
+
+.about-project__cell_short {
+  max-width: 228px;
+}
+
+.about-project__cell_colored {
+  background-color: #3DDC84;
+  color: #000;
+}
+
+@media screen and (max-width: 800px) {
+  .about-project__cell_short {
+    max-width: 140px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .about-project__cards {
+    margin-top: 60px;
+    gap: 56px;
+    flex-direction: column;
+  }
+  .about-project__card-title {
+    font-size: 18px;
+  }
+
+  .about-project__card-subtitle {
+    font-size: 11px;
+    line-height: 16px;
+    margin: 16px 0 0 0;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .about-project__cell_short {
+    max-width: 100px;
+  }
 }
