--- a/src/components/HeaderSection/HeaderSection.css
+++ b/src/components/HeaderSection/HeaderSection.css
@@ -5,3 +5,10 @@
   padding-bottom: 23px;
   border-bottom: solid 1px #DADADA;
 }
+
+@media screen and (max-width: 480px) {
+  .header-section {
+    font-size: 18px;
+    padding-bottom: 28px;
+  }
+}
