--- a/src/components/Section/Section.css
+++ b/src/components/Section/Section.css
@@ -1,35 +1,97 @@
 .section {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .section__container {
-    max-width: 1140px;
-    min-width: 320px;
-    width: 100%;
+  max-width: 1140px;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .section_promo {
   background-color: #073042;
-  padding: 75px 0;
+  padding: 150px 0;
 }
 
-.section_about-project {}
+.section_about-project {
+  background-color: #202020;
+  padding: 110px 0;
+}
+
+.section_techs {
+  background-color: #272727;
+  padding: 100px 0;
+}
+
+.section_about-me {
+  background-color: #202020;
+  padding: 110px 0 50px 0;
+}
+
+.section_portfolio {
+  background-color: #202020;
+  padding: 50px 0 125px 0;
+}
 
 @media screen and (max-width: 1139px) {
+  .section_promo,
+  .section_about-project,
+  .section_techs,
+  .section_about-me,
+  .section_portfolio {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
   .section_promo {
-    padding: 75px 30px 75px 30px;
+    padding-top: 150px;
+    padding-bottom: 75px;
+  }
+
+  .section_about-project {
+    padding-top: 90px;
+    padding-bottom: 90px;
   }
 }
 
 @media screen and (max-width: 1100px) {
   .section_promo {
-    padding: 140px 0 75px 0;
+    padding: 225px 0 75px 0;
+  }
+
+  .section_techs,
+  .section_about-me {
+    padding-top: 90px;
+    padding-bottom: 90px;
   }
 }
 
 @media screen and (max-width: 500px) {
   .section_promo {
-    padding: 70px 0 30px 0;
+    padding: 145px 0 30px 0;
+  }
+
+  .section_about-project {
+    padding: 70px 18px;
+  }
+
+  .section_techs {
+    padding: 60px 18px 70px 18px;
+  }
+
+  .section_about-me {
+    padding: 70px 14px 70px 14px;
+  }
+
+}
+
+@media screen and (max-width: 320px) {
+  .section_promo,
+  .section_about-project,
+  .section_techs,
+  .section_about-me,
+  .section_portfolio {
+    background-color: #202020;
   }
 }
