--- a/src/components/Section/Section.css
+++ b/src/components/Section/Section.css
@@ -26,12 +26,12 @@
 
 .section_about-me {
   background-color: #202020;
-  padding: 110px 0 50px 0;
+  padding: 110px 0 0 0;
 }
 
 .section_portfolio {
   background-color: #202020;
-  padding: 50px 0 125px 0;
+  padding: 100px 0 125px 0;
 }
 
 @media screen and (max-width: 1139px) {
@@ -61,7 +61,7 @@
   }
 
   .section_techs,
-  .section_about-me {
+  .section_portfolio {
     padding-top: 90px;
     padding-bottom: 90px;
   }
@@ -80,10 +80,12 @@
     padding: 60px 18px 70px 18px;
   }
 
-  .section_about-me {
+  .section_about-me{
+    padding: 70px 14px 0 14px;
+  }
+  .section_portfolio {
     padding: 70px 14px 70px 14px;
   }
-
 }
 
 @media screen and (max-width: 320px) {
