--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -19,6 +19,7 @@
   font-size: 50px;
   font-weight: 400;
   line-height: 58px;
+  letter-spacing: -2px;
 }
 
 .about-me__title {
@@ -33,6 +34,7 @@
   font-size: 14px;
   font-weight: 400;
   line-height: 22px;
+  max-width: 599px;
 }
 
 .about-me__link {
