--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -10,7 +10,7 @@
 }
 
 .portfolio__list {
-  margin: 50px 0 0 0;
+  margin: 31px 0 0 0;
   padding: 0;
   list-style: none;
 }
@@ -29,7 +29,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 0;
+  padding: 14px 0;
   width: 100%;
   text-decoration: none;
   color: #FFF;
@@ -37,6 +37,7 @@
   font-weight: 400;
   line-height: 50px;
   letter-spacing: -1.2px;
+  margin-top: 1px;
 }
 
 .portfolio__ico {
