--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -7,6 +7,7 @@
   font-size: 50px;
   font-weight: 400;
   line-height: 58px;
+  letter-spacing: -2px;
 }
 
 .techs__subtitle {
@@ -16,6 +17,7 @@
   font-weight: 400;
   line-height: 20px;
   max-width: 460px;
+  letter-spacing: -0.56px;
 }
 
 .techs__list {
