--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -2,7 +2,6 @@
 }
 
 .portfolio__header {
-  /*margin-top: 50px;*/
   color: #8B8B8B;
   font-size: 18px;
   font-weight: 400;
@@ -46,6 +45,12 @@
   font-weight: 400;
   line-height: 60px;
   letter-spacing: -1.2px;
+}
+
+@media screen and (max-width: 768px) {
+  .portfolio__link {
+    letter-spacing: -2.3px;
+  }
 }
 
 @media screen and (max-width: 500px) {
