--- a/src/components/Section/Section.css
+++ b/src/components/Section/Section.css
@@ -40,8 +40,8 @@
   .section_techs,
   .section_about-me,
   .section_portfolio {
-    padding-left: 30px;
-    padding-right: 30px;
+    padding-left: 50px;
+    padding-right: 50px;
   }
 
   .section_promo {
@@ -50,20 +50,24 @@
   }
 
   .section_about-project {
-    padding-top: 90px;
-    padding-bottom: 90px;
+    padding-top: 92px;
+    padding-bottom: 85px;
   }
 }
 
 @media screen and (max-width: 1100px) {
   .section_promo {
-    padding: 225px 0 75px 0;
+    padding: 214px 0 75px 0;
   }
 
-  .section_techs,
-  .section_portfolio {
+  .section_techs {
     padding-top: 90px;
-    padding-bottom: 90px;
+    padding-bottom: 70px;
+  }
+
+  .section_portfolio {
+    padding-top: 75px;
+    padding-bottom: 73px;
   }
 }
 
