--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -68,12 +68,13 @@
 
 @media screen and (max-width: 640px) {
   .techs__title {
-    margin-top: 60px;
+    margin-top: 50px;
     font-size: 30px;
+    letter-spacing: -1.2px;
   }
 
   .techs__subtitle {
-    margin-top: 24px;
+    margin-top: 13px;
     font-size: 11px;
     line-height: 16px;
   }
