feat: add components

--- a/src/components/NavAuth/NavAuth.css
+++ b/src/components/NavAuth/NavAuth.css
@@ -52,3 +52,10 @@ position: relative;
 .nav-auth__close-ico {
   display: none;
 }
+
+@media screen and (max-width: 768px) {
+}
+
+@media screen and (max-width: 320px) {
+
+}
