reafactor: pixel to pixel

--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -8,6 +8,7 @@
   min-width: 320px;
   margin: 0 auto;
   padding-bottom: 80px;
+  box-sizing: border-box;
 }
 
 .movies__btn-next {
@@ -30,9 +31,37 @@
   opacity: .8;
 }
 
+@media screen and (max-width: 1140px) {
+  .movies__container {
+    padding: 0 30px;
+  }
+}
+
 @media screen and (max-width: 768px) {
+  .movies__container {
+    margin: 0;
+    padding-bottom: 80px;
+  }
+
+  .movies__btn-next {
+    margin-top: 80px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .movies__container {
+    padding: 0 14px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .movies__container {
+    padding: 0 10px;
+  }
 }
 
 @media screen and (max-width: 320px) {
-
+  .movies__container {
+    padding-bottom: 82px;
+  }
 }
