--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -1,9 +1,5 @@
 .movies-card-list {
-  /*max-width: 1140px;*/
-  /*min-width: 320px;*/
-  /*margin: 70px auto 0 auto;*/
   margin-top: 80px;
-  /*padding-bottom: 80px;*/
 }
 
 .movies-card-list__grid {
@@ -14,9 +10,53 @@
   padding: 0;
 }
 
+@media screen and (max-width: 1140px) {
+  .movies-card-list__grid {
+    grid-template-columns: repeat(2, 1fr);
+    justify-items: center;
+  }
+}
+
 @media screen and (max-width: 768px) {
+  .movies-card-list {
+    margin-top: 80px;
+  }
+
+  .movies-card-list__grid {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 35px 24px;
+  }
+}
+
+@media screen and (max-width: 740px) {
+  .movies-card-list__grid {
+    grid-template-columns: repeat(1, 1fr);
+    gap: 35px 24px;
+  }
 }
 
 @media screen and (max-width: 320px) {
+  .movies-card-list {
+    margin-top: 44px;
+  }
 
+  .movies-card__header {
+    padding: 0 14px;
+  }
+
+  .movies-card__cover {
+    margin-top: 15px;
+  }
+
+  .movies-card__btn {
+    margin: 15px auto 0 auto;
+  }
+
+  .movies-card-list__grid {
+    gap: 5px;
+  }
+
+  .movies__btn-next {
+    margin-top: 76px;
+  }
 }
