fix: Remove sticky header by layout

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,8 +3,8 @@
   display: flex;
   justify-content: center;
   flex: 0 0 auto;
-  position: fixed;
-  z-index: 2;
+  /*position: fixed;*/
+  /*z-index: 2;*/
 }
 
 .header__container {
