--- a/src/components/SectionTechs/SectionTechs.css
+++ b/src/components/SectionTechs/SectionTechs.css
@@ -51,7 +51,8 @@
     margin-top: 22px;
     font-size: 12px;
     line-height: 18px;
-    letter-spacing: -0.48px;
+    letter-spacing: -0.4px;
+    max-width: 400px;
   }
 
   .techs__list{
