fix: Fixing BEM bugs

--- a/src/components/FooterPageAuth/FooterPageAuth.css
+++ b/src/components/FooterPageAuth/FooterPageAuth.css
@@ -3,29 +3,29 @@
   margin-top: 15px;
 }
 
-.footer-page-auth__content__question,
-.footer-page-auth__content__link{
+.footer-page-auth__question,
+.footer-page-auth__link{
   font-size: 14px;
   font-weight: 400;
 }
-.footer-page-auth__content__question {
+.footer-page-auth__question {
   color: #8B8B8B;
   padding-right: 7px;
 }
 
-.footer-page-auth__content__link{
+.footer-page-auth__link{
   color: #4285F4;
   text-decoration: none;
   transition: opacity 250ms ease-out;
 }
 
-.footer-page-auth__content__link:hover{
+.footer-page-auth__link:hover{
   opacity: .7;
 }
 
 @media screen and (max-width: 410px) {
-  .footer-page-auth__content__question,
-  .footer-page-auth__content__link{
+  .footer-page-auth__question,
+  .footer-page-auth__link{
     font-size: 12px;
   }
   .footer-page-auth {
