--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -28,8 +28,9 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
-  margin-top: 20px;
-  padding-bottom: 20px;
+  margin-top: 10px;
+  padding-bottom: 30px;
+  align-items: baseline;
 }
 
 .footer__copyright {
@@ -37,6 +38,9 @@
 }
 
 .footer__nav {
+  list-style: none;
+  display: flex;
+  padding: 0;
 }
 
 .footer__link {
@@ -53,6 +57,10 @@
 @media screen and (max-width: 1139px) {
   .footer__container {
     padding: 0 30px;
+  }
+
+  .footer__subtitle {
+    margin-top: 7px;
   }
 }
 
@@ -79,13 +87,14 @@
   .footer__copyright {
     color: #8B8B8B;
     order: 2;
-    margin-top: 30px;
+    margin-top: 18px;
   }
 
   .footer__nav {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 16px;
   }
 
   .footer__link {
