--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -5,3 +5,21 @@
   background-image: url('../../images/logo.svg');
   margin: 18px 0;
 }
+
+.logo:hover {
+  animation: bounce 1s;
+}
+
+@keyframes bounce {
+  0%, 20%, 60%, 100% {
+    transform: translateY(0);
+  }
+
+  40% {
+    transform: translateY(-15px);
+  }
+
+  80% {
+    transform: translateY(-5px);
+  }
+}
