feat: add registration and authorization

--- a/src/components/InputError/InputError.css
+++ b/src/components/InputError/InputError.css
@@ -4,7 +4,7 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  display: inline-block;
+  display: block;
   margin-top: 6px;
   height: 12px;
   margin-bottom: 3px;
