--- a/src/components/PageProfile/PageProfile.css
+++ b/src/components/PageProfile/PageProfile.css
@@ -76,7 +76,6 @@
 .profile__input:focus {
   outline: none;
   border-bottom: solid 1px #3DDC84;
-  /*#4285F4;*/
 }
 
 .profile__input:active {
@@ -88,39 +87,33 @@
 }
 
 .profile__footer {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
   margin-top: 215px;
 }
 
-.profile__link,
 .profile__btn {
   transition: opacity 250ms ease-out;
   font-size: 13px;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+  background-color: #202020;
+  margin-bottom: 17px;
 }
 
-.profile__link {
-  display: block;
-  text-decoration: none;
+.profile__btn_exit {
   color: #EE3465;
   font-weight: 500;
 }
 
-.profile__btn {
+.profile__btn_edit {
   color: #FFF;
   font-weight: 400;
-  border: none;
-  padding: 0;
-  background-color: #202020;
-  margin-bottom: 17px;
-  cursor: pointer;
 }
 
 .profile__btn:hover {
   opacity: .8;
-}
-
-.profile__link:hover {
-  opacity: .7;
 }
 
 @media screen and (max-width: 768px) {
