--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -7,6 +7,7 @@
   box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.08);
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 }
 
 .movies-card__header {
