--- a/src/components/PageProfile/PageProfile.css
+++ b/src/components/PageProfile/PageProfile.css
@@ -31,7 +31,7 @@
 }
 
 .profile__form {
-  margin-top: 123px;
+  margin-top: 111px;
 }
 
 .profile__user-name,
@@ -84,12 +84,13 @@
 
 .profile__input:invalid {
   color: #EE3465;
+  border-bottom: solid 1px #EE3465;
 }
 
 .profile__footer {
   display: flex;
   flex-direction: column;
-  margin-top: 215px;
+  margin-top: 203px;
 }
 
 .profile__btn {
@@ -116,6 +117,11 @@
   opacity: .8;
 }
 
+.profile__btn_disable{
+  cursor: not-allowed;
+  color: #8B8B8B;
+}
+
 @media screen and (max-width: 768px) {
 
   .profile {
@@ -128,11 +134,11 @@
   }
 
   .profile__form {
-    margin-top: 96px;
+    margin-top: 84px;
   }
 
   .profile__footer {
-    margin-top: 206px;
+    margin-top: 194px;
     padding-bottom: 74px;
   }
 }
@@ -158,7 +164,7 @@
   }
 
   .profile__form {
-    margin-top: 80px;
+    margin-top: 68px;
   }
 
   .profile__footer {
