--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -132,10 +132,12 @@
 }
 
 @media screen and (max-width: 1140px) {
-  .search-form {
-    padding-right: 30px;
-    padding-left: 30px;
+  .search-form,
+  .search-form__checkbox-wrap {
+    margin-right: 30px;
+    margin-left: 30px;
   }
+
 }
 
 @media screen and (max-width: 768px) {
